--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -27,4 +27,12 @@ jobs:
 
     - name: Build with Gradle
       run: ./gradlew build
-      
+
+    - name: Build and Push Docker Image
+      uses: mr-smithers-excellent/docker-build-push@v6
+      with:
+        image: lemp1307/githubactions2
+        registry: docker.io
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+         
